--- a/common/header.html
+++ b/common/header.html
@@ -1,6 +1,6 @@
 <script type="text/discourse-plugin" version="0.8">
 
-api.decorateWidget("my-widget:after", helper => {
+api.decorateWidget("my-widget:before", helper => {
  // if (!api.getCurrentUser()) return;
 
   let container = api.container,
