--- a/common/header.html
+++ b/common/header.html
@@ -1,4 +1,5 @@
 <script type="text/discourse-plugin" version="0.8">
+const { iconNode } = require("discourse-common/lib/icon-library");
 
 api.decorateWidget("my-widget:before", helper => {
  // if (!api.getCurrentUser()) return;
