--- a/common/header.html
+++ b/common/header.html
@@ -1,7 +1,7 @@
 <script type="text/discourse-plugin" version="0.8">
 const { iconNode } = require("discourse-common/lib/icon-library");
 
-api.decorateWidget("my-widget:before", helper => {
+api.decorateWidget("techcomm-custom-new-topic-button-widget:before", helper => {
  // if (!api.getCurrentUser()) return;
 
   let container = api.container,
