--- a/common/header.html
+++ b/common/header.html
@@ -1,6 +1,10 @@
 <script type="text/discourse-plugin" version="0.8">
 const { iconNode } = require("discourse-common/lib/icon-library");
 
+api.createWidget('techcomm-custom-new-topic-button-widget', {
+  tagName: 'div.techcomm-custom-new-topic-button'
+});
+
 api.decorateWidget("techcomm-custom-new-topic-button-widget:before", helper => {
  // if (!api.getCurrentUser()) return;
 
@@ -42,4 +46,8 @@ api.decorateWidget("techcomm-custom-new-topic-button-widget:before", helper => {
   );
 });
 
+</script>
+
+<script type="text/x-handlebars" data-template-name="/connectors/before-create-topic-button/techcomm-custom-new-topic-button-widget">
+  {{mount-widget widget="techcomm-custom-new-topic-button-widget"}}
 </script>
