--- a/common/header.html
+++ b/common/header.html
@@ -27,7 +27,7 @@ api.decorateWidget("techcomm-custom-new-topic-button-widget:before", helper => {
       categoryd = topicCategory ? topicCategory : category;
 
     composerController.open({
-      action: window.open("http://tech.forums.softwareag.com/new-topic","_self"),
+      action: window.open("/new-topic","_self"),
       categoryId: categoryd,
       draftKey: composerModal.DRAFT
     });
